tests/baselines/reference/circularImportAlias.errors.txt
circularImportAlias.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
circularImportAlias.ts(5,30): error TS2449: Class 'C' used before its declaration.
circularImportAlias.ts(10,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== circularImportAlias.ts (3 errors) ====
    // expected no error
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export import a = A;
        export class D extends a.C {
                                 ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 circularImportAlias.ts:11:18: 'C' is declared here.
            id: number;
        }
    }
    
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class C { name: string }
        export import b = B;
    }
    
    var c: { name: string };
    var c = new B.a.C();
    
    
    